Fix Java 17 List access in program store test